cmss/main/default/objects/NumericalSeriesSettings__c/NumericalSeriesSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores numerical series</description>
    <label>Numerical Series Settings</label>
</CustomObject>