cmss/main/default/objects/NumericalSeriesSettings__c/fields/ClientClaimID__c.field-meta.xml
<CustomField>
    <fullName>ClientClaimID__c</fullName>
    <label>Client Claim ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>