cmss/main/default/objects/NumericalSeriesSettings__c/fields/GDPRClaimID__c.field-meta.xml
<CustomField>
    <fullName>GDPRClaimID__c</fullName>
    <label>GDPR Claim ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>